added bookings methods